--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="inner">
     <h1>必修曲リンク集</h1>
-    <p>必修曲を集めて飛びやすくしました。ぜひご活用ください。</p>
-    <p>操作性の点からPCでのご利用を推奨しておりますが、スマートフォンでも可能な限り操作しやすくなるように工夫いたしました。そのため、ところどころのリンクの文字がゾンビ仕様、笑顔仕様もしくは嫉妬仕様となっている可能性がございます。あらかじめご理解ください。</p>
+    <p>必修曲のリンクを集めて飛びやすくしました。ぜひご活用ください。</p>
+    <p>操作性の点からPCでのご利用を推奨しておりますが、スマートフォンでも可能な限り操作しやすくなるように工夫をいたしました。そのため、ところどころのリンクの文字がゾンビ仕様、笑顔仕様、もしくは嫉妬仕様となっている可能性がございます。あらかじめご理解ください。</p>
     <p>なお、お気づきの点がございましたらお気軽にお知らせください。</p>
     <div id="contents">
       <p>もくじ</p>
@@ -38,7 +38,7 @@
       <tr>
         <td class="separator">title</td>
         <td class="separator">MV</td>
-        <td class="separator">2D</td>
+        <td class="separator">2DMV</td>
       </tr>
       <tr>
         <td>Journey</td>
@@ -49,7 +49,7 @@
       <tr>
         <td class="separator">title</td>
         <td class="separator">MV</td>
-        <td class="separator">2D</td>
+        <td class="separator">2DMV</td>
       </tr>
       <tr>
         <td>霽れを待つ</td>
@@ -67,7 +67,7 @@
       <tr>
         <td class="separator">title</td>
         <td class="separator">MV</td>
-        <td class="separator">2D</td>
+        <td class="separator">2DMV</td>
       </tr>
       <tr>
         <td>ワンスアポンアドリーム</td>
@@ -196,7 +196,7 @@
       <tr>
         <td class="separator">title</td>
         <td class="separator">MV</td>
-        <td class="separator">2D</td>
+        <td class="separator">2DMV</td>
       </tr>
       <tr>
         <td>霽れを待つ</td>
@@ -275,7 +275,7 @@
       <tr>
         <td>the WALL</td>
         <td></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=chjFdvgWAjo">あんよ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=chjFdvgWAjo">迷子</a></td>
       </tr>
       <tr><td colspan="3" class="unitName">MORE MORE JUMP！</td></tr>
       <tr>
@@ -285,22 +285,22 @@
       </tr>
       <tr>
         <td>ミルククラウン・オン・ソーネチカ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=zRar5r3TieE">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=xBVIHNosBTg">ほーい</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=zRar5r3TieE">あんよ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=xBVIHNosBTg">ギコ</a></td>
       </tr>
       <tr>
         <td>ワールドワイドワンダー</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=6NdOqVypgCM">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=aO_ZCaoojh4">ほーい</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=6NdOqVypgCM">あんよ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=aO_ZCaoojh4">退路</a></td>
       </tr>
       <tr>
         <td>フロート・プランナー</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=gtodYcC1nrc">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=Brap_tO3Jj0">ほーい</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=gtodYcC1nrc">こっち</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=Brap_tO3Jj0">Sad</a></td>
       </tr>
       <tr>
         <td>ももいろの鍵</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=sAUdWpemfGw">あんよ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=sAUdWpemfGw">おいで</a></td>
         <td></td>
       </tr>
       <tr><td colspan="3" class="unitName">Vivid BAD SQUAD</td></tr>
@@ -311,23 +311,23 @@
       </tr>
       <tr>
         <td>劣等上等</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=oEkGC2HV7rc">こっち</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=oEkGC2HV7rc">やんよ</a></td>
         <td></td>
       </tr>
       <tr>
         <td>Awake Now</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=gtYydJJtQdg">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=BUyrhLRzAwU">ほーい</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=gtYydJJtQdg">やんよ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=BUyrhLRzAwU">バグ</a></td>
       </tr>
       <tr>
         <td>シャンティ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=POy0RvJeaqM">おいで</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=POy0RvJeaqM">そっぽ</a></td>
         <td></td>
       </tr>
       <tr>
         <td>下剋上</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=i68fGXA2qHU">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=XADWOc8alvw">ほーい</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=i68fGXA2qHU">向いて</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=XADWOc8alvw">狂狂</a></td>
       </tr>
       <tr><td colspan="3" class="unitName">ワンダーランズ×ショウタイム</td></tr>
       <tr>
@@ -337,38 +337,38 @@
       </tr>
       <tr>
         <td>ポジティブ☆ダンスタイム</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=FT91CrPPAqc">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=BdTf_uKTqos">ほーい</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=FT91CrPPAqc">今日も</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=BdTf_uKTqos">バグ</a></td>
       </tr>
       <tr>
         <td>ワンスアポンアドリーム</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=S84mvlha5Fc">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=1RoDmN9n8xE">ほーい</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=S84mvlha5Fc">わたし</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=1RoDmN9n8xE">罰点</a></td>
       </tr>
       <tr>
         <td>ショウタイム・ルーラー</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=uDBVetc5JKo">わんだ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=uDBVetc5JKo">悪い子</a></td>
         <td></td>
       </tr>
       <tr>
         <td>星空のメロディー</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=VznMASce0CM">ほーい</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=VznMASce0CM"></a></td>
         <td></td>
       </tr>
       <tr>
+        <td>踊れオーケストラ</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=5XcRbKUKSdY">要らん</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=jERIsGLQerY">嫌嫌</a></td>
+      </tr>
+      <tr>
         <td>Mr. Showtime</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=4NhL6mqkMWY">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=jSL3Q2BHtH4">ほーい</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=4NhL6mqkMWY">こんや</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=jSL3Q2BHtH4">バグ</a></td>
       </tr>
       <tr>
         <td>キラピピ★キラピカ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=mQH0Fmk1K0g">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=gJk_vTwiduU">ほーい</a></td>
-      </tr>
-      <tr>
-        <td>踊れオーケストラ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=5XcRbKUKSdY">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=jERIsGLQerY">ほーい</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=mQH0Fmk1K0g">いいな</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=gJk_vTwiduU">嫌嫌</a></td>
       </tr>
       <tr><td colspan="3" class="unitName">25時、ナイトコートで。</td></tr>
       <tr>
@@ -377,28 +377,28 @@
         <td class="separator">2D</td>
       </tr>
       <tr>
-        <td>Iなんです</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=QYpL88jiWFs">わんだ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=lMXlOPGjwUI">ほーい</a></td>
+        <td>ジェヘナ</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=7Y9sJvLI3Po">嫌嫌嫌</a></td>
+        <td></td>
       </tr>
       <tr>
         <td>泥中に咲く</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=K64V4V_SGGQ">わんだ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=K64V4V_SGGQ">今今今</a></td>
         <td></td>
       </tr>
       <tr>
-        <td>ジェヘナ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=7Y9sJvLI3Po">ほーい</a></td>
-        <td></td>
+        <td>Iなんです</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=QYpL88jiWFs">嫌嫌嫌</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=lMXlOPGjwUI">嫌嫌</a></td>
       </tr>
       <tr>
         <td>ノンブレス・オブリージュ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=lw7pcm1W5tw">わんだ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=lw7pcm1W5tw">嫌嫌嫌</a></td>
         <td></td>
       </tr>
       <tr>
-        <td>それがあなたの幸せだとしても</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=2xEQOoFT4_8">ほーい</a></td>
+        <td>それがあなたの幸せとしても</td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=2xEQOoFT4_8">嫌嫌嫌</a></td>
         <td></td>
       </tr>
     </table>
