--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="必修曲のリンクを集めました。たくさん使ってね">
   <title>必修曲リンク集</title>
   <link rel="icon" href="icon.svg">
   <link rel="stylesheet" href="css/styles.min.css">
@@ -11,7 +12,7 @@
   <div class="inner">
     <h1>必修曲リンク集</h1>
     <p>必修曲のリンクを集めて飛びやすくしました。ぜひご活用ください。</p>
-    <p>操作性の点からPCでのご利用を推奨しておりますが、スマートフォンでも可能な限り操作しやすくなるように工夫をいたしました。そのため、ところどころのリンクの文字がゾンビ仕様、笑顔仕様、もしくは嫉妬仕様となっている可能性がございます。あらかじめご理解ください。</p>
+    <p>操作性の点からPCでのご利用を推奨しておりますが、スマートフォンでも可能な限り操作しやすくなるように工夫をいたしました。そのため、リンクの文字がゾンビ仕様や笑顔仕様となっていたり、不具合が生じている可能性がございます。あらかじめご理解ください。</p>
     <p>なお、お気づきの点がございましたらお気軽にお知らせください。</p>
     <div id="contents">
       <p>もくじ</p>
@@ -21,7 +22,7 @@
         <li><a href="#forMe">for me</a></li>
       </ul>
     </div>
-    <h2 id="for531615353">for 531615353</h2>
+    <code id="for531615353">for 531615353</code>
     <table>
       <tr><td colspan="3" class="unitName">Virtual Singer</td></tr>
       <tr>
@@ -175,7 +176,7 @@
     </table>
     <p class="gekiatsu">※ 夏背さんはOrangestarさんの奥さんとかいう激アツ展開</p>
 
-    <h2 id="for5334">for 5334</h2>
+    <code id="for5334">for 5334</code>
     <table>
       <tr><td colspan="3" class="unitName">Virtual Singer</td></tr>
       <tr>
@@ -261,7 +262,7 @@
     </table>
     <p class="gekiatsu">※ 夏背さんはOrangestarさんの奥さんとかいう激アツ展開</p>
 
-    <h2 id="forMe">for me</h2>
+    <code id="forMe">for me</code>
     <table>
       <tr><td colspan="3" class="unitName">Virtual Singer</td></tr>
       <td>トラッシュ・アンド・トラッシュ！</td>
@@ -275,7 +276,7 @@
       <tr>
         <td>the WALL</td>
         <td></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=chjFdvgWAjo">迷子</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=chjFdvgWAjo">狂狂</a></td>
       </tr>
       <tr><td colspan="3" class="unitName">MORE MORE JUMP！</td></tr>
       <tr>
@@ -285,22 +286,22 @@
       </tr>
       <tr>
         <td>ミルククラウン・オン・ソーネチカ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=zRar5r3TieE">あんよ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=xBVIHNosBTg">ギコ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=zRar5r3TieE">迷子</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=xBVIHNosBTg">迷子</a></td>
       </tr>
       <tr>
         <td>ワールドワイドワンダー</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=6NdOqVypgCM">あんよ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=aO_ZCaoojh4">退路</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=6NdOqVypgCM">ギコ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=aO_ZCaoojh4">ギコ</a></td>
       </tr>
       <tr>
         <td>フロート・プランナー</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=gtodYcC1nrc">こっち</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=Brap_tO3Jj0">Sad</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=gtodYcC1nrc">退路</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=Brap_tO3Jj0">退路</a></td>
       </tr>
       <tr>
         <td>ももいろの鍵</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=sAUdWpemfGw">おいで</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=sAUdWpemfGw">Sad</a></td>
         <td></td>
       </tr>
       <tr><td colspan="3" class="unitName">Vivid BAD SQUAD</td></tr>
@@ -311,23 +312,23 @@
       </tr>
       <tr>
         <td>劣等上等</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=oEkGC2HV7rc">やんよ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=oEkGC2HV7rc">才能</a></td>
         <td></td>
       </tr>
       <tr>
         <td>Awake Now</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=gtYydJJtQdg">やんよ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=BUyrhLRzAwU">バグ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=gtYydJJtQdg">感情</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=BUyrhLRzAwU">発症</a></td>
       </tr>
       <tr>
         <td>シャンティ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=POy0RvJeaqM">そっぽ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=POy0RvJeaqM">嫌嫌</a></td>
         <td></td>
       </tr>
       <tr>
         <td>下剋上</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=i68fGXA2qHU">向いて</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=XADWOc8alvw">狂狂</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=i68fGXA2qHU">嫌嫌</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=XADWOc8alvw"></a></td>
       </tr>
       <tr><td colspan="3" class="unitName">ワンダーランズ×ショウタイム</td></tr>
       <tr>
@@ -337,17 +338,17 @@
       </tr>
       <tr>
         <td>ポジティブ☆ダンスタイム</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=FT91CrPPAqc">今日も</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=BdTf_uKTqos">バグ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=FT91CrPPAqc">まあ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=BdTf_uKTqos">絶叫</a></td>
       </tr>
       <tr>
         <td>ワンスアポンアドリーム</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=S84mvlha5Fc">わたし</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=1RoDmN9n8xE">罰点</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=S84mvlha5Fc">感情</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=1RoDmN9n8xE">落下</a></td>
       </tr>
       <tr>
         <td>ショウタイム・ルーラー</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=uDBVetc5JKo">悪い子</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=uDBVetc5JKo">絶体</a></td>
         <td></td>
       </tr>
       <tr>
@@ -357,18 +358,18 @@
       </tr>
       <tr>
         <td>踊れオーケストラ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=5XcRbKUKSdY">要らん</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=jERIsGLQerY">嫌嫌</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=5XcRbKUKSdY">絶命</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=jERIsGLQerY">落下</a></td>
       </tr>
       <tr>
         <td>Mr. Showtime</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=4NhL6mqkMWY">こんや</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=jSL3Q2BHtH4">バグ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=4NhL6mqkMWY">ユメ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=jSL3Q2BHtH4">ユメ</a></td>
       </tr>
       <tr>
         <td>キラピピ★キラピカ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=mQH0Fmk1K0g">いいな</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=gJk_vTwiduU">嫌嫌</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=mQH0Fmk1K0g">嫌嫌</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=gJk_vTwiduU">狂狂</a></td>
       </tr>
       <tr><td colspan="3" class="unitName">25時、ナイトコートで。</td></tr>
       <tr>
@@ -378,27 +379,27 @@
       </tr>
       <tr>
         <td>ジェヘナ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=7Y9sJvLI3Po">嫌嫌嫌</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=7Y9sJvLI3Po">嫌嫌</a></td>
         <td></td>
       </tr>
       <tr>
         <td>泥中に咲く</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=K64V4V_SGGQ">今今今</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=K64V4V_SGGQ">今今</a></td>
         <td></td>
       </tr>
       <tr>
         <td>Iなんです</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=QYpL88jiWFs">嫌嫌嫌</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=QYpL88jiWFs">嫌嫌</a></td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=lMXlOPGjwUI">嫌嫌</a></td>
       </tr>
       <tr>
         <td>ノンブレス・オブリージュ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=lw7pcm1W5tw">嫌嫌嫌</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=lw7pcm1W5tw">嫌嫌</a></td>
         <td></td>
       </tr>
       <tr>
         <td>それがあなたの幸せとしても</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=2xEQOoFT4_8">嫌嫌嫌</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=2xEQOoFT4_8">嫌嫌</a></td>
         <td></td>
       </tr>
     </table>
