--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <tr>
         <td rowspan="2">神のまにまに</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=b2GJcYBoVyg">ｵﾘｼﾞﾅﾙ</a></td>
+        <td rowspan="2"></td>
       </tr>
       <tr>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=a-eHtP43yKU">2020</a></td>
@@ -328,7 +329,7 @@
       <tr>
         <td>下剋上</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=i68fGXA2qHU">嫌嫌</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=XADWOc8alvw"></a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=XADWOc8alvw">嫌嫌</a></td>
       </tr>
       <tr><td colspan="3" class="unitName">ワンダーランズ×ショウタイム</td></tr>
       <tr>
@@ -353,18 +354,18 @@
       </tr>
       <tr>
         <td>星空のメロディー</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=VznMASce0CM"></a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=VznMASce0CM">絶命</a></td>
         <td></td>
       </tr>
       <tr>
         <td>踊れオーケストラ</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=5XcRbKUKSdY">絶命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=jERIsGLQerY">落下</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=5XcRbKUKSdY">落下</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=jERIsGLQerY">ユメ</a></td>
       </tr>
       <tr>
         <td>Mr. Showtime</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=4NhL6mqkMWY">ユメ</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=jSL3Q2BHtH4">ユメ</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=jSL3Q2BHtH4">慈愛</a></td>
       </tr>
       <tr>
         <td>キラピピ★キラピカ</td>
@@ -402,14 +403,45 @@
         <td><a target="_blank" href="https://www.youtube.com/watch?v=2xEQOoFT4_8">嫌嫌</a></td>
         <td></td>
       </tr>
+      <tr><td class="unitName" colspan="3">おまけ</td></tr>
+      <tr>
+        <td>ロケットサイダー</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=3x9_LpnRtAk">MV</a></td>
+      </tr>
+      <tr>
+        <td>惑星ループ</td>
+        <td colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=wCj04kwAFX8">MV</a></td>
+      </tr>
     </table>
 
     <div id="updates">
-      <p>更新履歴</p>
-      <ul>
-        <li>version 1.0: 2023 Aug 30</li>
-        <li>version 1.1: 2023 Aug 30</li>
-      </ul>
+      <p>Updates history</p>
+      <table>
+        <tr>
+          <td class="tac">ver.</td>
+          <td class="tac">date</td>
+          <td class="tac">details</td>
+        </tr>
+        <tr>
+          <td>1.0</td>
+          <td>2023 Aug 30</td>
+          <td>initial commit</td>
+        </tr>
+        <tr>
+          <td>1.1</td>
+          <td>2023 Aug 30</td>
+          <td>fixed styles</td>
+        </tr>
+        <tr>
+          <td>2.0</td>
+          <td>2023 Aug 31</td>
+          <td>
+            <p>added『ロケットサイダー』for me</p>
+            <p>added『惑星ループ』for me</p>
+            <p>updated styles</p>
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
 </body>
