--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="inner">
     <h1>必修曲リンク集</h1>
     <p>必修曲のリンクを集めて飛びやすくしました。ぜひご活用ください。</p>
-    <p>操作性の点からPCでのご利用を推奨しておりますが、スマートフォンでも可能な限り操作しやすくなるように工夫をいたしました。そのため、リンク文字のゾンビ化や笑顔化、もしくは不具合が生じている可能性がございます。あらかじめご理解ください。</p>
+    <p>操作性の点からPCでのご利用を推奨しておりますが、スマートフォンでも可能な限り操作しやすくなるように工夫をいたしました。そのため、リンクの文字がゾンビ状態、鳳状態、もしくは未完成である可能性がございます。あらかじめご理解ください。</p>
     <p>なお、お気づきの点がございましたらお気軽にお知らせください。</p>
     <div id="contents">
       <p>もくじ</p>
@@ -442,12 +442,12 @@
       <tr>
         <td>チームメイト</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=QAbwPeAYf_o">濫觴生命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=dXumRYQzs2s"></a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=dXumRYQzs2s">未完成</a></td>
       </tr>
       <tr>
         <td>ミルククラウン・オン・ソーネチカ</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=zRar5r3TieE">最終戦争</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=xBVIHNosBTg">未完成</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=xBVIHNosBTg">哨戒班</a></td>
       </tr>
 
       <tr><td colspan="3" class="unitName">Vivid BAD SQUAD</td></tr>
@@ -459,22 +459,22 @@
       <tr>
         <td>Beat Eater</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=Rcc_BreWEMI">空奏列車</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=DaWbq6KeJq4">哨戒班</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=DaWbq6KeJq4">冷凍庫</a></td>
       </tr>
       <tr>
         <td>Awake Now</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=gtYydJJtQdg">濫觴生命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=BUyrhLRzAwU">冷凍庫</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=BUyrhLRzAwU">蝉時雨</a></td>
       </tr>
       <tr>
         <td>ひつじがいっぴき</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=4J1O5NA8Nek">最終戦争</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=QkF12S1QCxc">蝉時雨</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=QkF12S1QCxc">未完成</a></td>
       </tr>
       <tr>
         <td>下剋上</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=i68fGXA2qHU">空奏列車</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=XADWOc8alvw">未完成</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=XADWOc8alvw">哨戒班</a></td>
       </tr>
       <tr>
         <td>リアライズ</td>
@@ -494,7 +494,7 @@
       <tr>
         <td>PaⅢ.SENSATION</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=OMQNhcGZbX4">濫觴生命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=bof7UD3MJAQ">哨戒班</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=bof7UD3MJAQ">冷凍庫</a></td>
       </tr>
       <tr>
         <td>シャンティ</td>
@@ -521,17 +521,17 @@
       <tr>
         <td class="priority">ワンスアポンアドリーム</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=S84mvlha5Fc">最終戦争</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=1RoDmN9n8xE">冷凍庫</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=1RoDmN9n8xE">蝉時雨</a></td>
       </tr>
       <tr>
         <td>トンデモワンダーズ</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=dBQg24mx45Y">空奏列車</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=ZfVWqos23xs">蝉時雨</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=ZfVWqos23xs">未完成</a></td>
       </tr>
       <tr>
         <td>Glory Steady Go!</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=Y-QhzXC9NbI">濫觴生命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=JoM4JGqQyCU">未完成</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=JoM4JGqQyCU">哨戒班</a></td>
       </tr>
       <tr>
         <td class="priority">ショウタイム・ルーラー</td>
@@ -546,7 +546,7 @@
       <tr>
         <td>88☆彡</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=505rBX9MNcQ">濫觴生命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=giOsLry_orw">哨戒班</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=giOsLry_orw">冷凍庫</a></td>
       </tr>
       <tr>
         <td>星空のメロディー</td>
@@ -556,12 +556,12 @@
       <tr>
         <td>Mr. Showtime</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=4NhL6mqkMWY">空奏列車</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=jSL3Q2BHtH4">冷凍庫</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=jSL3Q2BHtH4">蝉時雨</a></td>
       </tr>
       <tr>
         <td>キラピピ★キラピカ</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=mQH0Fmk1K0g">濫觴生命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=gJk_vTwiduU">蝉時雨</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=gJk_vTwiduU">未完成</a></td>
       </tr>
       <tr>
         <td>ブリキノダンス</td>
@@ -571,7 +571,7 @@
       <tr>
         <td class="small">ポジティブ☆ダンスタイム</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=FT91CrPPAqc">最終戦争</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=BdTf_uKTqos">未完成</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=BdTf_uKTqos">哨戒班</a></td>
       </tr>
       <tr>
         <td>お気に召すまま</td>
@@ -589,7 +589,7 @@
       <tr>
         <td>踊れオーケストラ</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=5XcRbKUKSdY">濫觴生命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=jERIsGLQerY">哨戒班</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=jERIsGLQerY">冷凍庫</a></td>
       </tr>
       
       <tr><td colspan="3" class="unitName">25時、ナイトコートで。</td></tr>
@@ -606,7 +606,7 @@
       <tr>
         <td>カナデトモスソラ</td>
         <td class="tac">-</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=GTlQhMRHXIg">冷凍庫</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=GTlQhMRHXIg">蝉時雨</a></td>
       </tr>
       <tr>
         <td>再生</td>
@@ -616,7 +616,7 @@
       <tr>
         <td>ロウワー</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=3sEptl-psU0">濫觴生命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=16M9oC-a5bY">蝉時雨</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=16M9oC-a5bY">未完成</a></td>
       </tr>
       <tr>
         <td>ノマド</td>
@@ -631,12 +631,12 @@
       <tr>
         <td>Iなんです</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=QYpL88jiWFs">濫觴生命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=lMXlOPGjwUI">未完成</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=lMXlOPGjwUI">哨戒班</a></td>
       </tr>
       <tr>
         <td>キティ</td>
         <td class="tac">-</td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=l-OtSO4dsLM">哨戒班</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=l-OtSO4dsLM">冷凍庫</a></td>
       </tr>
       <tr>
         <td>演劇</td>
@@ -652,7 +652,7 @@
       <tr>
         <td>独りんぼエンヴィー</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=UKVioegPPds">濫觴生命</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=tIvL_TlLckg">冷凍庫</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=tIvL_TlLckg">蝉時雨</a></td>
       </tr>
       <tr>
         <td>ベノム</td>
@@ -672,7 +672,7 @@
       <tr>
         <td>フォニイ</td>
         <td><a target="_blank" href="https://www.youtube.com/watch?v=9QLT1Aw_45s">最終戦争</a></td>
-        <td><a target="_blank" href="https://www.youtube.com/watch?v=zBePOfn5FIg">蝉時雨</a></td>
+        <td><a target="_blank" href="https://www.youtube.com/watch?v=zBePOfn5FIg">未完成</a></td>
       </tr>
       <tr>
         <td>泥中に咲く</td>
