updated code and fixed icon

--- a/index.html
+++ b/index.html
@@ -745,6 +745,14 @@
             <p>added『いちにのさんで』『陽だまりのセツナ』『ワールズエンド・ダンスホール』『Miku』『パラジクロロベンゼン』『夜明けと蛍』『Goodbye』『ココロ』『Afterglow』『群青讃歌』『needLe』『流星のパルス』『てらてら』『相生』『星を繋ぐ』『ロキ』『ウミユリ海底譚』『from Y to Y』『ray』『心拍数♯0822』『ロストエンファウンド』『天ノ弱』『glow』『チームメイト』『Beat Eater』『ひつじがいっぴき』『リアライズ』『チルドレンレコード』『PaⅢ.SENSATION』『セカイはまだ始まってすらいない』『potatoになっていく』『トンデモワンダーズ』『Glory Steady Go!』『にっこり^^調査隊のテーマ』『88☆彡』『ブリキノダンス』『お気に召すまま』『神のまにまに』『悔やむと書いてミライ』『カナデトモスソラ』『再生』『ロウワー』『ノマド』『君の夜をくれ』『キティ』『演劇』『命に嫌われている』『独りんぼエンヴィー』『ベノム』『メリュー』『フォニイ』『命ばっかり』『心做し』for me</p>
           </td>
         </tr>
+        <tr>
+          <td>3.1</td>
+          <td>2023 Aug. 31</td>
+          <td>
+            <p>updated code;</p>
+            <p>fixed icon</p>
+          </td>
+        </tr>
       </table>
     </div>
   </div>
